Started creating separate page for questions

--- a/unfoldApp/src/pages/page2/page2.html
+++ b/unfoldApp/src/pages/page2/page2.html
@@ -54,11 +54,12 @@
       </ion-item>
 
       <ion-item>
+        <!--TODO: Link to person's calendar-->
         <ion-label color="primary" stacked>By when will you achieve this result?</ion-label>
         <ion-input
           formControlName="byWhen"
-          type="text"
-          placeholder="TODO: Link in calendar"></ion-input>
+          type="date">
+        </ion-input>
       </ion-item>
 
       <ion-item>
