--- a/unfoldApp/src/pages/QGamePossibility/QGamePossibility.html
+++ b/unfoldApp/src/pages/QGamePossibility/QGamePossibility.html
@@ -3,18 +3,18 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Create Game: Step 2</ion-title>
+    <ion-title>Create Game: Step 3</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <ion-item>
-    <h2>What is the name of your game?</h2>
+    <h2>What is your possibility</h2>
   </ion-item>
   <form (submit)="processForm()" [formGroup]="form">
     <ion-item>
       <ion-input
-        formControlName="gameName"
+        formControlName="gamePossibility"
         type="text">
       </ion-input>
     </ion-item>
